# NLP-Exercise-4

./: README.md  main.ipynb  main.py  pyproject.toml
results/: results.json
